5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4469/executions/1635_2704.log
== TEST (2019-04-08 15:36:16) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao == "S") || (bonificacao == "N")) && ((nota >= 0.0) && (nota <= 10.0))):
	if(bonificacao == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Informe a bonificacao em maiusculo")
-- ERROR:
File "XXXX", line 4
    if(((bonificacao == "S") || (bonificacao == "N")) && ((nota >= 0.0) && (nota <= 10.0))):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:38:35) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao == "S") or (bonificacao == "N")) and ((nota >= 0.0) and (nota <= 10.0))):
	if(bonificacao == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao invalidos")
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:39:53) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao.upper() == "S") or (bonificacao.upper == "N")) and ((nota >= 0.0) and (nota <= 10.0))):
	if(bonificacao == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao invalidos")
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:40:25) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao.upper() == "S") or (bonificacao.upper() == "N")) and ((nota >= 0.0) and (nota <= 10.0))):
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao invalidos")
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:40:42) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao.upper() == "S") or (bonificacao.upper() == "N")) and ((nota >= 0.0) and (nota <= 10.0))):
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao invalidos")
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:40:51) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao.upper() == "S") or (bonificacao.upper() == "N")) and ((nota >= 0.0) and (nota <= 10.0))):
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao invalidos")
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:41:09) 
-- CODE:
nota = float(input("Entre com a nota do aluno: "))
bonificacao = input("Aluno recebe bonificacao? (S / N) ")

if(((bonificacao.upper() == "S") or (bonificacao.upper() == "N")) and ((nota >= 0.0) and (nota <= 10.0))):
	if(bonificacao.upper() == "S"):
		print(nota + ((nota * 10) / 100))
	else:
		print(nota)
else:
	print("Nota ou bonificacao invalidos")
-- EXECUTION TIME:
0.168141
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
